dashboard/ingress-entry-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: enter-ingress-dashboard
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
